@@ -250,6 +250,19 @@ static void Host_Version_f (void)
 }
 #endif
 
+/* cvar callback functions : */
+static void Callback_Deathmatch (cvar_t *var)
+{
+	if (var->integer)
+		Cvar_Set ("coop", "0");
+}
+
+static void Callback_Coop (cvar_t *var)
+{
+	if (var->integer)
+		Cvar_Set ("deathmatch", "0");
+}
+
 /*
 =======================
 Host_InitLocal
@@ -283,6 +296,8 @@ static void Host_InitLocal (void)
 	Cvar_RegisterVariable (&skill);
 	Cvar_RegisterVariable (&coop);
 	Cvar_RegisterVariable (&deathmatch);
+	Cvar_SetCallback (&coop, Callback_Coop);
+	Cvar_SetCallback (&deathmatch, Callback_Deathmatch);
 	Cvar_RegisterVariable (&randomclass);
 
 	Cvar_RegisterVariable (&pausable);
